--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-# VITE_BACKEND_API = https://midtermikhroma.onrender.com
-VITE_BACKEND_API = http://localhost:3000
+VITE_BACKEND_API = https://goto-final-back-production.up.railway.app/
