--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_BACKEND_API = https://goto-final-back-production.up.railway.app/
+VITE_BACKEND_API = https://goto-final-back-production.up.railway.app
