--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "npx http-server ./dist"
+    "start": "npx http-server ./dist -a 0.0.0.0"
   },
   "dependencies": {
     "localforage": "^1.10.0",
